<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity2">

    <ImageView
            android:layout_width="148dp"
            android:layout_height="113dp" android:id="@+id/imageView"
            tools:ignore="MissingConstraints" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.017"
            app:layout_constraintVertical_bias="0.478"/>
    <ImageView
            android:layout_width="148dp"
            android:layout_height="111dp" android:id="@+id/imageView5"
            tools:ignore="MissingConstraints" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.478"/>
    <TextView
            android:textSize="20sp"
            android:gravity="center"
            android:layout_width="129dp"
            android:layout_height="26dp" android:id="@+id/Villed"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.068" app:layout_constraintVertical_bias="0.368"/>
    <TextView
            android:textSize="20sp"
            android:gravity="center"
            android:layout_width="133dp"
            android:layout_height="26dp" android:id="@+id/Villea"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.938" app:layout_constraintVertical_bias="0.368"/>
    <TextView
            android:text="@string/Vers"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.474"
            app:layout_constraintHorizontal_bias="0.498"/>
    <TextView
            android:textSize="20sp"
            android:gravity="center"
            android:layout_width="131dp"
            android:layout_height="30dp" android:id="@+id/Heured"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.068" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.593"/>
    <TextView
            android:textSize="20sp"
            android:gravity="center"
            android:layout_width="131dp"
            android:layout_height="30dp" android:id="@+id/Heurea"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.935" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.593"/>
    <TextView
            android:text="@string/Prix"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_width="79dp"
            android:layout_height="46dp" android:id="@+id/Prixtext"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.678" app:layout_constraintHorizontal_bias="0.528"/>
    <TextView
            android:textSize="20sp"
            android:gravity="center"
            android:layout_width="79dp"
            android:layout_height="46dp" android:id="@+id/Prix"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.528" app:layout_constraintVertical_bias="0.762"/>
    <Button
            android:text="@string/Retour"
            android:onClick="retour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button2"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.536" app:layout_constraintVertical_bias="0.877"/>
    <TextView
            android:layout_width="271dp"
            android:textSize="50sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_height="99dp" android:id="@+id/Titre"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintVertical_bias="0.057" android:text="@string/Intinéraire"/>
    <TextView
            android:text="@string/Date"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_width="124dp"
            android:layout_height="58dp" android:id="@+id/Datetext"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.449" app:layout_constraintVertical_bias="0.2"/>
    <TextView
            android:textSize="15sp"
            android:gravity="center"
            android:layout_width="124dp"
            android:layout_height="58dp" android:id="@+id/valeurd"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.446" app:layout_constraintVertical_bias="0.287"/>
</androidx.constraintlayout.widget.ConstraintLayout>